manifests/deploy.yaml
#       Copyright 2017 IBM Corp All Rights Reserved

#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at

#       http://www.apache.org/licenses/LICENSE-2.0

#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

#Deploy the pod
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: loyalty-level
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: loyalty-level
        solution: stock-trader
        version: v1
    spec:
      containers:
      - name: loyalty-level
        image: loyalty-level:latest
        ports:
          - containerPort: 9080
        imagePullPolicy: Always
---
#Deploy the service
apiVersion: v1
kind: Service
metadata:
  name: loyalty-level-service
  labels:
    app: loyalty-level
spec:
  type: NodePort
  ports:
    - port: 9080
      name: http
#     nodePort: 31003
  selector:
    app: loyalty-level
---
#Configure the ingress 
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: loyalty-level-ingress
# annotations:
#   kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /loyalty-level
        backend:
          serviceName: loyalty-level-service
          servicePort: 9080
