manifests/deployIstio.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: loyalty-level
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        alpha.istio.io/sidecar: injected
        alpha.istio.io/version: jenkins@ubuntu-16-04-build-12ac793f80be71-0.1.6-dab2033
        pod.beta.kubernetes.io/init-containers: '[{"args":["-p","15001","-u","1337"],"image":"docker.io/istio/init:0.1","imagePullPolicy":"Always","name":"init","securityContext":{"capabilities":{"add":["NET_ADMIN"]}}},{"args":["-c","sysctl
          -w kernel.core_pattern=/tmp/core.%e.%p.%t \u0026\u0026 ulimit -c unlimited"],"command":["/bin/sh"],"image":"alpine","imagePullPolicy":"Always","name":"enable-core-dump","securityContext":{"privileged":true}}]'
      creationTimestamp: null
      labels:
        app: loyalty-level
        version: v1
    spec:
      containers:
      - env:
        - name: MQ_ID
          valueFrom:
            secretKeyRef:
              key: id
              name: mq
        - name: MQ_PASSWORD
          valueFrom:
            secretKeyRef:
              key: pwd
              name: mq
        - name: MQ_HOST
          valueFrom:
            secretKeyRef:
              key: host
              name: mq
        - name: MQ_PORT
          valueFrom:
            secretKeyRef:
              key: port
              name: mq
        - name: MQ_CHANNEL
          valueFrom:
            secretKeyRef:
              key: channel
              name: mq
        - name: MQ_QUEUE_MANAGER
          valueFrom:
            secretKeyRef:
              key: queue-manager
              name: mq
        - name: MQ_QUEUE
          valueFrom:
            secretKeyRef:
              key: queue
              name: mq
        image: loyalty-level:latest
        imagePullPolicy: IfNotPresent
        name: loyalty-level
        ports:
        - containerPort: 9080
        resources: {}
      - args:
        - proxy
        - sidecar
        - -v
        - "2"
        image: docker.io/istio/proxy_debug:0.1
        imagePullPolicy: Always
        name: proxy
        resources: {}
        securityContext:
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/certs
          name: istio-certs
          readOnly: true
      volumes:
      - name: istio-certs
        secret:
          secretName: istio.default
status: {}
---
#Deploy the service
apiVersion: v1
kind: Service
metadata:
  name: loyalty-level-service
  labels:
    app: loyalty-level
spec:
  type: NodePort
  ports:
    - port: 9080
      nodePort: 31003
  selector:
    app: loyalty-level
---
#Configure the ingress 
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
# annotations:
#   ingress.kubernetes.io/rewrite-target: /loyalty-level
  name: loyalty-level-ingress
spec:
  rules:
  - http:
      paths:
      - path: /loyalty-level
        backend:
          serviceName: loyalty-level-service
          servicePort: 9080
---
